--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Patient Visualization</title>
+    <link rel="stylesheet" type="text/css" href="styling.css">
+    <title>Patient Immobilization</title>
   </head>
 
   <body onload="main()">
-    <canvas id="webgl" width="600" height="600">
+    <p><center>This is the Software Interface for the BME 390 Capstone Project</center></p>
+    <canvas id="myCanvas" width="600" height="600">
     Please use a browser that supports "canvas"
     </canvas>
 
