--- a/index.html
+++ b/index.html
@@ -4,6 +4,30 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="styling.css">
     <title>Patient Immobilization</title>
+  
+    
+    <style> 
+      #NewPatient {
+        width:100px;
+        height:20px;
+        line-height:20px;
+        background-color: #4caf50;
+        display:inline-block;
+        color:#ffffff;
+      	font-family:Arial;
+    	  font-size: 15px;
+    	  font-weight:bold;
+    	  text-align:center;	
+    	  text-decoration:none; 
+    	  padding:5px 5px;
+      	border-radius: 2px;
+        position: absolute;
+        top: 60px;
+        left: 480px;
+      }
+    </style>
+  
+
   </head>
 
   <body onload="main()">
@@ -11,8 +35,11 @@
     <canvas id="myCanvas" width="600" height="600">
     Please use a browser that supports "canvas"
     </canvas>
-
     
-    <script src="functions.js"></script>
+        <a href="#" class="Button" id="NewPatient">New Patient</a>
+
+    <script src="functions.js"> </script>
   </body>
 </html>
+
+
